--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -128,3 +128,11 @@ padding: 0px;
 th, td {
     padding: 4px !important;
 }
+
+.expunge-it {
+    width: 50px;
+    height: 30px;
+    font-size: 8px;
+    margin-bottom: 3px;
+    padding: 1px 1px 3px 1px;
+}
