--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -1,44 +1,48 @@
-@media screen {
-    body {
-        width: 8.5in;
-        height: 11in;
-        padding-left: 1.5in;
-        padding-right: .5in;
-        margin: 0;
-        border-left: 1px solid grey;
-        border-right: 1px solid grey;
+.footer, .footer-space {
+      height: 100px;
     }
-
-
-    .container {
-        border-left: 2px solid black;
-        border-right: 2px solid black;
-        width: 6.5in;
-        margin: 0;
-        padding: 5px;
-        height: 100%;
-    }
+.footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width:100%;
+  font-size:12pt;
+}
+.footer__company {
+    margin:0;
+}
+.footer__phone {
+    margin:0;
 }
 
-.title {
+.container.form__container {
+    font-family: 'Times New Roman', Times, serif;
+    text-align:left;
+
+}
+table {
+    width:100%;
+}
+.petition__title {
+    text-decoration: underline;
+    text-transform: uppercase;
+    font-size:20px;
+    text-align:center;
+}
+
+.indent {
+    text-indent: 3em;
+}
+.header__title {
     text-align: center;
     font-size: 20px;
-    font-family: "Times New Roman";
-}
-
-.header {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    text-transform: uppercase;
 
 }
-
 .header2 {
-    /* width: 8.5in; */
     display: flex;
     flex-direction: row;
     width: 100%;
-
 }
 
 .docketNumHeader {
@@ -58,8 +62,6 @@
 
 p {
     font-size: 20px;
-    margin: 0px !important;
-    font-family: 'Times New Roman', Times, serif;
 }
 
 .caption {
@@ -84,7 +86,8 @@ p {
 }
 
 .editable {
-    border: 1px solid black;
+    border: 1px dotted black;
+    background-color:#ff0;
 }
 
 .convictionBox {
@@ -134,33 +137,67 @@ th, td {
 }
 
 
-@media print {
+
+@media screen {
     body {
-        width: 13.5in;
-        height: 16.5in;
-        padding-left: 1.5in;
-        padding-right: 1in;
+        
         margin: 0;
-        border-left: 1px solid gray;
-        border-right: 1px solid gray;
-        /*Newly added codes */
-        /* box-sizing: border-box; */
+    }
+    .page {
+        width: 65rem;
+        margin: 0;
+        padding: 8rem;
+        height: 100%;
+        border:1px solid #ddd;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:8rem;
+    }
+    .footer,.footer-space {
+        display: none;
+    }
+    .no-visible {
+        display:none !important;
     }
 
+}
+
+
+@media print {
+    @page { 
+        size: letter portrait;
+        margin: 1.25in 1.25in 0.375in 1.25in 
+    }
+    body {
+        font-size:12pt;
+        line-height: 1.3;
+        background: #fff !important;
+        color: #000;
+    }
+    
+    .page {
+        page-break-after: always;
+    }
+    .page:last-of-type {
+        page-break-after: auto;
+    }
+    .no-print {
+        display:none !important;
+    }
     .container {
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
+
     }
-
-
+    .editable {
+        border:0;
+        background-color: transparent;
+    }
 
     .header {
         margin: 0;
         padding: 0;
-        width: 10in;
     
     }
     
@@ -169,14 +206,12 @@ th, td {
         display: flex;
         flex-direction: row;
         padding: 0;
-        width: 10in;
     }
 
     .petition-body {
-        width: 10in;
-    }
 
-    p, .title, td, th {
-        font-size: 30px;
+    }
+    p, .petition__title, .header__title, td, th {
+        font-size: 20pt;
     }
 }
