--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -1,3 +1,35 @@
+.header-bar {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    background: #222;
+    color:#fff;
+    min-height:60px;
+    top:0;
+    left:0;
+    right:0;
+    z-index: 10;
+    padding: 0.6rem 0.8rem;
+}
+.header-bar-wrapper {
+    height:50px;
+    position: relative;
+}
+.header-bar h1 {
+    font-size: 1.5rem;
+    margin:0;
+    padding: 0;
+    margin-right: 1rem;
+    flex-grow: 1
+}
+.header-bar__controls {
+    flex-grow: 0;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.header-bar__controls button {
+    margin-left:0.5rem;
+}
 .document-meta-data {
     position: absolute;
     top:-60px;
@@ -179,11 +211,13 @@
         margin: 0;
     }
     .page {
-        width: 65rem;
+        max-width: 65rem;
+        width:80%;
+        min-width:40rem;
         margin: 0;
-        padding: 8rem;
+        padding: 7rem;
         height: 100%;
-        border:1px solid #ddd;
+        border:2px solid #ddd;
         margin-left:auto;
         margin-right:auto;
         margin-top:8rem;
