--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -1,3 +1,10 @@
+.page p, .page h1 {
+    margin-bottom:0;
+    font-size:20px;
+
+}
+
+
 .header-bar {
     position: fixed;
     display: flex;
@@ -39,20 +46,18 @@
     font-family: sans-serif;
     text-align: left;
 }
-.document-meta-data__title {
-    font-size:1.25em;
+p.document-meta-data__title {
+    font-size:1.25rem;
     margin-bottom: 0;
 }
-.document-meta-data__body {
-    font-size:0.75em;
+p.document-meta-data__body {
+    font-size:0.75rem;
     text-transform: uppercase;
     font-weight: 800
 }
 
 
-.all-filings {
-    width: 100%;
-}
+
 .page {
     font-family: 'Times New Roman', Times, serif;
     text-align:left;
@@ -60,9 +65,7 @@
     margin-left:auto;
     margin-right: auto;
 }
-.page p, .page h1 {
-    margin-bottom:0;
-}
+
 
 .filing-header__title {
     text-transform: uppercase;
@@ -95,6 +98,12 @@
 .filing-header__court, .docket-number__division, .docket-number__label {
     text-transform: uppercase;
 }
+.docket-number__label {
+    opacity:0;
+}
+.docket-number__numbers:nth-of-type(2) .docket-number__label{
+    opacity:1;
+}
 .docket-caption {
     display: flex;
 }
@@ -122,11 +131,11 @@
 
 
 
-.filing-title {
+.page .filing-title {
     text-decoration: underline;
     text-transform: uppercase;
-    font-size:20px;
     text-align:center;
+    margin-bottom:2rem;
 }
 
 .indent {
@@ -157,11 +166,12 @@
 }
 
 .count-table__header {
-    border-top:1px solid #ddd;
-    border-bottom:2px solid #ddd;
+    border-top:1px solid #999;
+    border-bottom:1px solid #999;
 }
 .count-table {
     width:100%;
+    margin-bottom:1.5rem;
 }
 .count-table input{
     width:100%;
@@ -170,14 +180,15 @@
     padding: 2px ;
     vertical-align: middle;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+}
+.count-table td {
+    margin-top:4px;
 }
 .count-table td:first-of-type {
     width:25%;
 }
-.count-item {
-    border-bottom:1px solid #ddd;
+.count-table__body .count-item {
+    border-top:1px solid #999;
 }
 .filing-closing {
     margin-top:4rem;
@@ -201,8 +212,15 @@
     padding-top:0.25rem;
 }
 
+.stipulated-closing {
+    margin-top:2.5rem;
+}
+.fill-in {
+    opacity: 1;
+    position: relative;
+    border-bottom: 1.5px solid #000;
 
-
+}
 @media screen {
     body {
         
@@ -230,69 +248,106 @@
     .page:last-of-type {
         margin-bottom:100px;
     }
-
+    .all-filings,.extra-pages {
+    width: 100%;
+    min-width:70rem;
 }
 
+}
 
 @media print {
     @page { 
         size: letter portrait;
-        margin: 0.75in 0.25in 0.375in 0.25in 
+        margin: 1in 0.25in 0.75in 0.25in;
+        
     }
+
     body {
-        font-size:18pt;
+        font-size:20pt;
         line-height: 1.3;
         color: #000;
+        width:8.5in;
     }
+
     
     .page {
         page-break-after: always;
         position: relative;
-        padding-left:0.75in;
-        padding-right:0.75in;
-        padding-top:0.5in;
-        height: 100%;
         overflow: visible;
-
-    }
-    .page.include-margin-lines {
-        margin-left:1.25in;
+        background:#fff;
+        margin:0;
         padding-left:0.25in;
         padding-right:0.25in;
-    }
-    .page.include-margin-lines:before {
-        height:15in;
-        position: absolute;
-        border-left:0.01in solid #000;
-        content: "";
-        left:0;
-        top:0.5in;
 
     }
-    .page.include-margin-lines:after {
-        height:15in;
-        position: absolute;
-        border-left:0.01in solid #000;
-        content: "";
-        right:0;
-        top:0.5in;
+    .count-table + p {
+        padding-top:1rem;
     }
+    .spacer-page {
+        height:0;
+        margin-bottom:-0.25in;
+    }
+
     .no-print {
         display:none !important;
     }
-
-    .footer, .footer-space {
+    .all-filings {
+        width:93%;
+        border-left:0.01in solid #000;
+        border-right:0.01in solid #000;
+        margin-left:15%;
+        
+    }
+    .extra-pages {
+        box-sizing: border-box;
+        width:100%;
+        margin-left:0.75in;
+        margin-right:0.75in;
+    }
+    .footer {
         height: 100px;
+        font-size:16pt;
+        line-height: 1.1em;
+
+    }
+    .footer-space {
+        height:100px;
+
     }
     .footer {
       position: fixed;
       bottom: 0;
       text-align: center;
       width:100%;
-      font-size:12pt;
-    }
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      border-bottom:0.2in solid #fff;
+      margin-bottom:-0.1in;
 
-    p, .filing-title, .header__title, td, th {
+    }
+    .count-table {
+        page-break-inside:auto;
+    }
+    .count-table tr {
+        page-break-inside:auto; page-break-after:auto;
+    }
+    .filing-closing {
+        page-break-inside:avoid; page-break-after:auto;
+
+    }
+    .filing-body__response {
+        page-break-inside:auto;
+    }
+    .filing-closing__signature-box, .filing-closing__date-box {
+         margin-top:0.5in;
+    }
+    .footer, .page, p, .page .filing-title, .page .header__title, td, th {
         font-size: 20pt;
     }
+    .page p, .page h1 {
+        font-size:20pt;
+
+}
+
 }
