--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -42,14 +42,37 @@
 .filing-nav {
     position: fixed;
     top:100px;
-    left:10px;
+    left:0;
+    padding:1rem;
+    padding-left:1;
+    z-index: 100;
+    background-color:#fff;
+    width:15em;
 }
-.active-parent.filing-nav__parent-link {
-    border-left:5px solid #f00;
-
+.filing-nav ol {
+    padding:0;
+    padding-left:0.25rem;
+}
+.filing-nav__parent-link {
+    font-weight: bold;
+    color:#000;
+    font-size: 1rem
+}
+.filing-nav__parent-link a {
+    color:#000;
+}
+.filing-nav__child-link {
+    font-weight: normal;
+    transition:border 0.1s ease-in-out;
+    color:#007bff;
+    font-size: 1rem
+    margin-left:0;
+}
+.filing-nav__child-link a {
+       color:#007bff;
 }
 .active.filing-nav__child-link {
-    border-left:5px solid #f00;
+    border-left:5px solid #007bff;
 }
 
 
@@ -244,13 +267,12 @@ p.document-meta-data__body {
     }
     .page {
         max-width: 65rem;
-        width:80%;
+        width:70%;
         min-width:40rem;
-        margin: 0;
         padding: 7rem;
         height: 100%;
         border:2px solid #ddd;
-        margin-left:auto;
+        margin-left:15rem;
         margin-right:auto;
         margin-top:8rem;
         position: relative;
