--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -1,8 +1,14 @@
-.page p, .page h1 {
-    margin-bottom:0;
-    font-size:20px;
+/* Helpers */
 
+.indent {
+    text-indent: 2em;
 }
+.bold {
+    font-weight: bold;
+}
+
+
+/* No filings message */
 
 .no-filings {
     display: flex;
@@ -12,6 +18,15 @@
     text-align: center;
     padding:4rem;
 }
+
+/* reset page font sizes */
+.page p, .page h1 {
+    margin-bottom:0;
+    font-size:20px;
+}
+
+/* Fixed position header bar */
+
 .header-bar {
     position: fixed;
     display: flex;
@@ -45,6 +60,8 @@
     margin-left:0.5rem;
 }
 
+
+/* Sidebar Nav */
 
 .filing-nav {
     position: fixed;
@@ -95,6 +112,7 @@
 
 }
 
+/* Title section above each document */
 
 .document-meta-data {
     position: absolute;
@@ -112,10 +130,12 @@ p.document-meta-data__title {
 p.document-meta-data__body {
     font-size:0.75rem;
     text-transform: uppercase;
-    font-weight: 800
+    font-weight: 800;
+    font-size:14px;
+
 }
 
-
+/* Formatting for page elements Print & Screen */
 
 .page {
     font-family: 'Times New Roman', Times, serif;
@@ -125,43 +145,29 @@ p.document-meta-data__body {
     margin-right: auto;
 }
 
-
-.filing-header__title {
-    text-transform: uppercase;
-    text-align: center;
-    width:100%;
-    margin-bottom:1rem;
-}
 .filing-header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: stretch;
-    margin-bottom:2.5rem;
-
+    margin-bottom:2rem;
 }
+
+.filing-header__title {
+    text-transform: uppercase;
+    text-align: center;
+    width:100%;
+    margin-bottom:0.5rem;
+}
+
 .filing-header__half {
     width:50%;
 }
 .filing-header__court {
-    margin-bottom:2rem;
-}
-.filing-header__docket-number {
-    text-align: left;
-    display:inline-block;
-}
-.filing-title {
-    text-align: center;
+    margin-bottom:1rem;
 }
 
-.filing-header__court, .docket-number__division, .docket-number__label {
-    text-transform: uppercase;
-}
-.docket-number input {
-    max-width:11rem;
-    width:50%;
-    min-width:9rem;
-}
+
 .docket-number__label {
     opacity:0;
 }
@@ -183,44 +189,27 @@ p.document-meta-data__body {
     text-transform: uppercase;
 }
 
-
-
-
-.footer__company {
-    margin:0;
-}
-.footer__phone {
-    margin:0;
+.filing-header__docket-number {
+    text-align: left;
+    display:inline-block;
 }
 
-
+.filing-header__court, .docket-number__division, .docket-number__label {
+    text-transform: uppercase;
+}
+.docket-number input {
+    max-width:11rem;
+    width:50%;
+    min-width:9rem;
+}
 
 .page .filing-title {
     text-decoration: underline;
     text-transform: uppercase;
     text-align:center;
-    margin-bottom:2rem;
+    margin-bottom:1.5rem;
 }
 
-.indent {
-    text-indent: 2em;
-}
-.bold {
-    font-weight: bold;
-}
-.header__title {
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-
-}
-
-
-.page input, .page textarea {
-    border: 1px dotted black;
-    background-color:#ffb;
-    padding:0.25rem;
-}
 .filing-body p {
     line-height: 1.3;
     margin-bottom: 0.5em;
@@ -241,7 +230,7 @@ p.document-meta-data__body {
     width:100%;
 }
 .count-table th, .count-table td {
-    padding: 2px ;
+    padding: 3px ;
     vertical-align: middle;
     text-align: center;
 }
@@ -253,6 +242,8 @@ p.document-meta-data__body {
 }
 .count-table__body .count-item {
     border-top:1px solid #999;
+    line-height:1.2em;
+
 }
 .filing-closing {
     margin-top:2rem;
@@ -279,15 +270,19 @@ p.document-meta-data__body {
 .stipulated-closing {
     margin-top:2.5rem;
 }
+
+/* Use this with a span full of non-breaking spaces to give it a solid fill-in underline */
 .fill-in {
     opacity: 1;
     position: relative;
     border-bottom: 1.5px solid #000;
-
 }
+
+
+
+
 @media screen {
     body {
-        
         margin: 0;
     }
     .page {
@@ -313,27 +308,32 @@ p.document-meta-data__body {
         margin-bottom:100px;
     }
     .all-filings,.extra-pages {
-    width: 100%;
-    min-width:70rem;
-}
+        width: 100%;
+        min-width:70rem;
+    }
+
+    /* Styles UI Inputs */
+    .page input, .page textarea {
+        border: 1px dotted black;
+        background-color:#ffb;
+        padding:0.25rem;
+    }
 
 }
 
 @media print {
     @page { 
         size: letter portrait;
-        margin: 1.25in 0.25in 1in 0.25in;
-        
+        margin: 1.5in 0.25in 1in 0.25in;
     }
-
     body {
-        font-size:20pt;
         line-height: 1.3;
         color: #000;
         width:8.5in;
     }
-
-    
+    .no-print {
+        display:none !important;
+    }
     .page {
         page-break-after: always;
         position: relative;
@@ -352,15 +352,13 @@ p.document-meta-data__body {
         margin-bottom:-0.25in;
     }
 
-    .no-print {
-        display:none !important;
-    }
+
+
     .all-filings {
         width:93%;
         border-left:0.01in solid #000;
         border-right:0.01in solid #000;
         margin-left:15%;
-        
     }
     .extra-pages {
         box-sizing: border-box;
@@ -368,27 +366,29 @@ p.document-meta-data__body {
         margin-left:0.75in;
         margin-right:0.75in;
     }
-    .footer {
-        height: 100px;
-        font-size:16pt;
-        line-height: 1.1em;
 
-    }
     .footer-space {
         height:150px;
-
     }
     .footer {
-      position: fixed;
-      bottom: 0;
-      text-align: center;
-      width:100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      border-bottom:0.2in solid #fff;
-      margin-bottom:-0.1in;
+        position: fixed;
+        bottom: 0;
+        text-align: center;
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        border-bottom:0.2in solid #fff;
+        margin-bottom:-0.1in;
+        height: 100px;
 
+    }
+    .footer__company {
+        margin:0;
+        margin-bottom:0.25em;
+    }
+    .footer__phone {
+        margin:0;
     }
     .count-table {
         page-break-inside:auto;
@@ -406,12 +406,22 @@ p.document-meta-data__body {
     .filing-closing__signature-box, .filing-closing__date-box {
          margin-top:0.5in;
     }
+
+    /* Font Size Adjustments */
+    body {
+        font-size:19pt;
+
+    }
     .footer, .page, p, .page .filing-title, .page .header__title, td, th {
-        font-size: 20pt;
+        font-size: 19pt;
     }
     .page p, .page h1 {
-        font-size:20pt;
+        font-size:19pt;
+    }
+    .footer {
+        font-size:14pt;
+        line-height: 1.1em;
 
-}
+    }
 
 }
