Changes footer typeface.

--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -421,7 +421,8 @@ p.document-meta-data__body {
     }
     .footer {
         font-size:14pt;
-        line-height: 1.1em;
+        line-height: 1.2em;
+        font-family: 'Times New Roman', Times, serif;
 
     }
 
