--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -238,7 +238,7 @@ p.document-meta-data__body {
     margin-top:4px;
 }
 .count-table td:first-of-type {
-    width:25%;
+    width:33%;
 }
 .count-table__body .count-item {
     border-top:1px solid #999;
@@ -281,6 +281,7 @@ p.document-meta-data__body {
 
 
 
+
 @media screen {
     body {
         margin: 0;
@@ -318,6 +319,13 @@ p.document-meta-data__body {
         background-color:#ffb;
         padding:0.25rem;
     }
+    .count-item__textarea {
+    width: 100%;
+    height:2.15rem;
+    margin-bottom:-2px;
+    margin-top:3px;
+}
+
 
 }
 
