--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -6,6 +6,9 @@
 .bold {
     font-weight: bold;
 }
+.italic {
+    font-style: italic;
+}
 
 
 /* No filings message */
@@ -248,6 +251,10 @@ p.document-meta-data__body {
 .filing-closing {
     margin-top:1.5rem;
 }
+.filing-closing.filing-closing--align-right {
+    display: flex;
+    justify-content: flex-end
+}
 .filing-closing__signature-area {
     display: flex;
     line-height: 1.3;
@@ -265,6 +272,12 @@ p.document-meta-data__body {
     width: 25%;
     margin-top:2.5rem;
     padding-top:0.25rem;
+}
+.filing-closing__contact-box {
+    margin-top:2rem;
+}
+.filing-closing__phone {
+    margin-top:1rem;
 }
 
 .stipulated-closing {
