got docket sheet num

--- a/extensionDirectory/forms/forms.css
+++ b/extensionDirectory/forms/forms.css
@@ -93,7 +93,7 @@
     font-weight: normal;
     transition:box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
     color:#007bff;
-    font-size: 1rem
+    font-size: 1rem;
     margin-left:0;
     padding-left:10px;
 
