Implements all new text for each pro-se and non-pro-se petition. Places editing fields in the context of the filing pages.

--- a/extensionDirectory/filings.css
+++ b/extensionDirectory/filings.css
@@ -62,6 +62,7 @@
 }
 .header-bar__controls label {
     margin:0;
+    margin-left:0.75rem;
 }
 .header-bar__controls button {
     margin-left:0.5rem;
