Continues Vue templating of the popup.

--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -1,12 +1,11 @@
 
 body {
     width: 475px;
-    height:400px;
+    min-height:400px;
+    height:auto;
+
     padding:10px;
     box-sizing: border-box;
-}
-body.active {
-    height:auto;
 }
 body:before {
     content:"";
@@ -22,13 +21,6 @@ body:before {
 }
 button {
     outline: none;
-}
-
-body.active .empty-state, body .active-state {
-    display:none;
-}
-body .empty-state, body.active .active-state{
-    display:block;
 }
 
 .pet-label,.pet-details {
