Updates buttons, makes more elements reactive. Temporarily disables expanding of cards.

--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -246,11 +246,14 @@ hr {
 }
 
 /* Count Cards */
-
+.card {
+    margin-bottom:0.5rem;
+}
 .card .card-header {
     padding:0.5rem;
     -webkit-appearance:none;
     cursor: pointer;
+
 }
 .card-header__column {
     position: relative;
